# llm-router

./: .dockerignore  .env  Dockerfile  Makefile  OPTIMIZATIONS.md  README.md  check_router_status.sh  docker-compose.yaml  models.md  test_router_models.py  triton_config.yaml
crates/llm-router-gateway-api/src/: proxy.rs
guardrails_config/: config.yml
guardrails_config/rails/: flows.co
src/router-controller/: config.yml  readme.md
src/router-controller/crates/llm-router-gateway-api/: Cargo.toml
src/router-controller/crates/llm-router-gateway-api/src/: auth.rs  cache.rs  circuitbreaker.rs  client.rs  config.rs  error.rs  health.rs  lib.rs  loadbalance.rs  logging.rs  metrics.rs  nim.rs  proxy.rs  ratelimit.rs  retry.rs
