[package]
name = "llm-router-gateway-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Paul Hendricks, Rachel Oberman", "Arun Raman"]
description = "Nvidia LLM Router Controller Proxy"


[dependencies]
anyhow = "1"
base64 = "0.21"
bytes = "1.6.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
futures-util = "0.3"
http = "1.1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = "0.27.2"
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1.5.0"
openssl = "0.10.66"
pin-project-lite = "0.2"
prometheus = "0.13.4"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.12.5", features = ["json", "stream", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.9", features = ["macros"]}
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
governor = "0.6.3"
tracing = "0.1"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.8"
tokio-test = "0.4"
